<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewState"
            type="com.abangfadli.monic.search.result.SearchResultViewState" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <RelativeLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:background="@color/secondary_green"
            android:paddingLeft="@dimen/default_side_margin"
            android:paddingRight="@dimen/default_side_margin"
            android:gravity="center_vertical"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/toolbar_title"
                android:textColor="@color/white"
                tools:text="Android"
                android:text="@string/text_sample_jakarta_barat"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/page_top_bottom_margin"
            android:paddingBottom="@dimen/page_top_bottom_margin"
            android:clipToPadding="false"
            android:layout_above="@+id/separator_bottom"
            android:layout_below="@id/layout_toolbar"
            tools:listitem="@layout/search_item_widget"
            />

        <include
            android:id="@+id/separator_bottom"
            layout="@layout/separator_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/layout_bottom_bar"
            />

        <LinearLayout
            android:id="@+id/layout_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:padding="@dimen/medium_content_padding"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/button_filter"
                style="@style/SearchResultButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/small_margin"
                android:text="@string/text_filter"/>

            <Button
                android:id="@+id/button_sort"
                style="@style/SearchResultButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_margin"
                android:text="@string/text_sort"
                />

        </LinearLayout>

    </RelativeLayout>

</layout>
