<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:background="@color/secondary_green"
            android:paddingLeft="@dimen/default_side_margin"
            android:paddingRight="@dimen/default_side_margin"
            android:gravity="center_vertical"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/toolbar_title"
                android:textColor="@color/white"
                tools:text="Android"
                android:text="@string/text_sample_jakarta_barat"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_search"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@id/layout_toolbar">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.v4.view.ViewPager
                    android:id="@+id/view_pager_promo"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/primary_green"/>


                <android.support.v7.widget.CardView
                    android:id="@+id/layout_card_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_section_margin"
                    android:layout_below="@id/view_pager_promo"
                    >

                    <RelativeLayout
                        android:id="@+id/container_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/medium_content_padding"
                        android:paddingBottom="@dimen/medium_content_padding"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_label_category"
                            style="@style/SectionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/default_side_margin"
                            android:text="@string/text_label_category"/>

                        <ImageView
                            android:id="@+id/image_category"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="@dimen/default_side_margin"
                            android:layout_alignParentRight="true"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_view_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_label_category"
                            android:layout_marginTop="@dimen/default_section_margin"
                            android:paddingLeft="@dimen/default_side_margin"
                            android:paddingRight="@dimen/default_side_margin"
                            android:clipToPadding="false"
                            tools:listitem="@layout/category_item_widget"
                            />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/layout_card_local_vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_card_category"
                    android:layout_marginTop="@dimen/default_section_margin"
                    >

                    <RelativeLayout
                        android:id="@+id/container_local_vendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/medium_content_padding"
                        android:paddingBottom="@dimen/medium_content_padding"
                        >

                        <TextView
                            android:id="@+id/text_label_local"
                            style="@style/SectionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/default_side_margin"
                            android:text="@string/text_label_local"/>

                        <ImageView
                            android:id="@+id/image_local"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="@dimen/default_side_margin"
                            android:layout_alignParentRight="true"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_view_local"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_label_local"
                            android:layout_marginTop="@dimen/default_section_margin"
                            android:paddingLeft="@dimen/default_side_margin"
                            android:paddingRight="@dimen/default_side_margin"
                            android:clipToPadding="false"
                            tools:listitem="@layout/search_item_widget"
                            />

                        <View
                            android:id="@+id/separator_local_vendor"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/default_margin"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:layout_below="@id/recycler_view_local"
                            android:background="@color/gray_separator"/>

                        <TextView
                            android:id="@+id/text_see_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/separator_local_vendor"
                            android:layout_marginLeft="@dimen/default_side_margin"
                            android:text="@string/text_label_see_more"
                            android:textSize="@dimen/text_link"
                            android:textColor="@color/text_link"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/layout_card_local_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_card_local_vendor"
                    android:layout_marginTop="@dimen/default_section_margin"
                    >

                    <RelativeLayout
                        android:id="@+id/container_local_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/medium_content_padding"
                        android:paddingBottom="@dimen/medium_content_padding"
                        >

                        <TextView
                            android:id="@+id/text_label_local_menu"
                            style="@style/SectionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/default_side_margin"
                            android:text="@string/text_label_local_menu"/>

                        <ImageView
                            android:id="@+id/image_local_menu"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="@dimen/default_side_margin"
                            android:layout_alignParentRight="true"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_view_local_menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_label_local_menu"
                            android:layout_marginTop="@dimen/default_section_margin"
                            android:paddingLeft="@dimen/default_side_margin"
                            android:paddingRight="@dimen/default_side_margin"
                            android:clipToPadding="false"
                            tools:listitem="@layout/search_item_widget"
                            />

                        <View
                            android:id="@+id/separator_local_menu"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/default_margin"
                            android:layout_marginBottom="@dimen/default_margin"
                            android:layout_below="@id/recycler_view_local_menu"
                            android:background="@color/gray_separator"/>

                        <TextView
                            android:id="@+id/text_see_more_local_menu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/separator_local_menu"
                            android:layout_marginLeft="@dimen/default_side_margin"
                            android:text="@string/text_label_see_more"
                            android:textSize="@dimen/text_link"
                            android:textColor="@color/text_link"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>